Tiger_frontend/project1_test_code_example/tests/correct/var-array-init.tiger
main let
    var a : array[2] of int := 5;
in begin
    a[0] := 2;
    printi(a[0]);
end
