Tiger_frontend/project1_test_code_example/tests/errors/var-duplicate-declare-inline.tiger
main let
        var sum, i, sum : int;
in
begin
        for i := 0 to 99 do
                sum := sum + i;
        enddo;
end